# syncMyMoodle

./: .editorconfig  .gitignore  Dockerfile  README.md  config.json.example  config.py  config.py.example  config.toml.example  docker-compose.yml  gui.py  helper.py  manual.json  pyproject.toml  requirements.txt  setup.cfg  syncMyMoodle.py  syncMyMoodleGUI.py
.github/: release-drafter.yml
.github/scripts/: smoke_distribution.py
.github/workflows/: release-drafter.yml  release.yaml  test.yaml  yt-dlp-compatibility.yaml
docs/: README.md  authentication.md  cleanup-and-troubleshooting.md  cli-reference.md  configuration.md  everyday-recipes.md  getting-started.md  how-sync-works.md  migrating-from-0-5.md  quizzes-and-linked-content.md  releasing.md
syncmymoodle/: __init__.py  __main__.py  app.py  cleanup.py  cli.py  config.py  config.toml.example  constants.py  context.py  course_cache.py  downloader.py  emedia.py  filetree.py  filters.py  http_utils.py  links.py  moodle.py  moodle_files.py  moodle_tokens.py  node.py  opencast.py  outcomes.py  output.py  pathing.py  quiz.py  rwth.py  sciebo.py  secret_providers.py  storage.py  sync.py  sync_handlers.py  totp.py
syncmymoodle/certs/: HARICA-GEANT-TLS-R1.pem
tests/: conftest.py  helpers.py  test_auth_flow.py  test_cleanup.py  test_config.py  test_course_cache_safety.py  test_course_prefix_handling.py  test_download_behavior.py  test_emedia.py  test_error_handling.py  test_http_utils.py  test_link_cache.py  test_login.py  test_moodle_api_contract.py  test_moodle_auth.py  test_moodle_tokens.py  test_node.py  test_output.py  test_package_metadata.py  test_quiz.py  test_removed_content.py  test_rwth_status.py  test_secret_providers.py  test_storage_safety.py  test_symlink_safety.py  test_sync_filtering.py  test_sync_fixtures.py  test_totp.py
tests/fixtures/html/: external_overview.html  h5p_iframe.html  h5p_view.html  page_module.html
tests/fixtures/moodle/: assignment_opencast_assignments.json  assignment_opencast_course.json  courses.json  mixed_assignments.json  mixed_course.json  mixed_courses.json  mixed_folders.json  mixed_submission_files.json  nested_folder_course.json  opencast_lti_course.json  skip_rules_course.json
tests/fixtures/opencast/: episode_series_a.json  episode_series_b.json  episode_single.json  lti_series.html  lti_single.html  series.json
tests/fixtures/sciebo/: propfind_root.xml  propfind_slides.xml  public_share.html  public_share_no_token.html
tests/snapshots/: assignment_opencast_tree.txt  mixed_course_tree.txt  nested_folder_tree.txt  opencast_lti_tree.txt  skip_rules_tree.txt
