[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncMyMoodle"
version = "0.4.1"
description = "Synchronization client for RWTH Moodle"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Nils Kattenbeck", email = "nilskemail+pypi@gmail.com" }
]
keywords = ["moodle", "sync", "rwth", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable"
]
scripts = { syncmymoodle = "syncmymoodle.cli:main" }

urls = { "Homepage" = "https://github.com/Romern/syncMyMoodle", "Bug Tracker" = "https://github.com/Romern/syncMyMoodle/issues" }

dependencies = [
  "requests>=2.0.0",
  "beautifulsoup4>=4.0.0",
  "yt-dlp>=2021.12.27",
  "tqdm>=4.0.0",
  "lxml>=5.0.0"
]

[project.optional-dependencies]
keyring = ["keyring>=20.0.0"]
test = [
  "black",
  "isort",
  "flake8",
  "flake8-bugbear",
  "mypy",
  "pytest",
  "types-requests"
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "bs4",
  "yt_dlp",
  "tqdm",
  "keyring",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
select = ["C", "E", "F", "W", "B", "B901"]
extend-ignore = ["E203", "E501", "W503"]
