[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncMyMoodle"
version = "0.5.0"
description = "Synchronization client for RWTH Moodle"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Nils Kattenbeck", email = "nilskemail+pypi@gmail.com" }
]
keywords = ["moodle", "sync", "rwth", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable"
]
scripts = { syncmymoodle = "syncmymoodle.cli:main" }

urls = { "Homepage" = "https://github.com/Romern/syncMyMoodle", "Bug Tracker" = "https://github.com/Romern/syncMyMoodle/issues" }

dependencies = [
  "requests>=2.0.0",
  "beautifulsoup4>=4.0.0",
  "yt-dlp>=2021.12.27",
  "tqdm>=4.0.0",
  "lxml>=5.0.0",
  "latex2mathml>=3.77.0",
  "pywin32>=306; platform_system == 'Windows'",
  "tomli-w>=1.0.0"
]

[project.optional-dependencies]
keyring = ["keyring>=20.0.0"]
test = [
  "ruff",
  "mypy",
  "pytest",
  "types-requests"
]

[tool.setuptools.package-data]
syncmymoodle = ["config.toml.example"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, B: bugbear, I: import sorting (replaces
# black + isort + flake8 + flake8-bugbear).
# Complexity checking (C90) is turned off for now; the old flake8 config
# selected it but never took effect. Enabling it flags several long
# functions (e.g. rwth.login, sync_handlers) that might be worth a
# refactor later.
select = ["E", "W", "F", "B", "I"]
# Line length is the formatter's job.
ignore = ["E501"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "bs4",
  "yt_dlp",
  "tqdm",
  "latex2mathml",
  "keyring",
]
ignore_missing_imports = true
