[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncMyMoodle"
version = "0.5.0"
description = "Synchronization client for RWTH Moodle"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Nils Kattenbeck", email = "nilskemail+pypi@gmail.com" }
]
keywords = ["moodle", "sync", "rwth", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable"
]
scripts = { syncmymoodle = "syncmymoodle.cli:main" }

urls = { "Homepage" = "https://github.com/Romern/syncMyMoodle", "Bug Tracker" = "https://github.com/Romern/syncMyMoodle/issues" }

dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.2",
  "yt-dlp>=2023.7.6",
  "rich>=14.1.0",
  "lxml>=5.0.0",
  "latex2mathml>=3.77.0",
  "keyring>=24.2.0",
  "pywin32>=306; platform_system == 'Windows'",
  "tomlkit>=0.13.0",
]

[project.optional-dependencies]
test = [
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "types-requests>=2.32.0.20240602"
]

[tool.setuptools.package-data]
syncmymoodle = ["config.toml.example", "certs/*.pem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["syncmymoodle"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, B: bugbear, I: import sorting (replaces
# black + isort + flake8 + flake8-bugbear), C90: McCabe complexity.
select = ["E", "W", "F", "B", "I", "C90"]
# Line length is the formatter's job.
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "bs4",
  "yt_dlp",
  "latex2mathml",
  "keyring",
]
ignore_missing_imports = true
