[metadata]
name = syncMyMoodle
version = 0.0.2
author = Nils Kattenbeck
author_email = nilskemail+pypi@gmail.com
description = Synchronization client for RWTH Moodle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Romern/syncMyMoodle
project_urls =
    Bug Tracker = https://github.com/Romern/syncMyMoodle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.0.0
    beautifulsoup4>=4.0.0
    youtube-dl>=2021.6.0
    pdfkit>=0.6.0
    tqdm>=4.0.0
    braceexpand>=0.1.7

[options.extras_require]
keyring =
    secretstorage>=3.1.0
test =
    black
    isort
    flake8
    flake8-bugbear
    mypy
    types-requests

[flake8]
max-line-length = 88
select = C,E,F,W,B,B901
extend-ignore = E203, E501
